--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/index.ts",
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/cors": "^2.8.14",
@@ -16,9 +17,16 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.0",
+    "graphql-tools": "^9.0.0",
     "mongoose": "^7.5.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
