--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/index.ts",
     "dev": "nodemon ./src/index.ts",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@types/cors": "^2.8.14",
@@ -17,7 +17,6 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.0",
-    "graphql-tools": "^9.0.0",
     "mongoose": "^7.5.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -26,7 +25,9 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   }
 }
