--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/app.ts",
+    "start": "yarn build && node ./dist/app.js",
+    "build": "tsc",
     "dev": "nodemon ./src/app.ts",
     "test": "jest --watch"
   },
