--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn build && node ./dist/app.js",
+    "start": "node ./dist/app.js",
     "build": "tsc",
     "dev": "nodemon ./src/app.ts",
     "test": "jest --watch"
